language/move-lang/tests/move_check/translated_ir_tests/move/operators/boolean_not_non_boolean.move
script {
fun main() {
    !0;
}
}
// check: BOOLEAN_OP_TYPE_MISMATCH_ERROR
